# skel-telegram-bot

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  main-vercel.py  main.py  pyproject.toml  requirements.txt  setup.sh  start.sh  vercel.json
src/skel_telegram_bot/: agent_client.py  bot.py
src/skel_telegram_bot/config/: settings.py
src/skel_telegram_bot/utils/: logger.py
